--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 jupyterlite-core==0.1.0
 jupyterlab~=3.5.1
 
-# Python kernel (optional)
+# Python kernel (optional - can be changed)
 jupyterlite-pyodide-kernel==0.0.6
 
 # JavaScript kernel (optional)
