--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
   
   set-variables:
     needs: build
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     steps:
       - name: Retrieve secret
         env:
