--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,5 +56,5 @@ jobs:
         env:
           db_name: ${{ secrets.DB_NAME }}
         run: |
-          echo "$db_name"
+          echo "kecske macska"
   
