--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Retrieve db_name secret
         env:
           DB_NAME: ${{ secrets.DB_NAME }}
+        run: |
+          echo "Set variable to : $DB_NAME"
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Python
