--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,4 +48,4 @@ jobs:
         uses: actions/deploy-pages@v1
       - name: Set up env var
         run: |
-          export DB_NAME=testing  
+          cat /etc/environment
